<resources xmlns:tools="http://schemas.android.com/tools" tools:shrinkMode="strict">
    <string name="app_name">Unito-Anywhere</string>
    <string name="header_smart_water_system">SMART WATER SYSTEM</string>
    <string name="lbl_enter">Enter</string>
    <string name="lbl_filter">Filter Status</string>
    <string name="lbl_soda_water">Sparkling Water</string>
    <string name="lbl_cold_water">Cold Water</string>
    <string name="lbl_hot_water">Hot Water</string>
    <string name="header_water_system">WATER SYSTEM</string>
    <string name="alert_connect_device">Please Connect Device</string>
    <string name="lbl_soft">Soft</string>
    <string name="lbl_medium">Medium</string>
    <string name="lbl_intense">Intense</string>
    <string name="lbl_start_provisioning">Provisioning</string>
    <string name="lbl_linking_alexa">Activate voice command</string>
    <string name="lbl_versions">Versions</string>
    <string name="lbl_connection_setup">Communication setup</string>
    <string name="title_connection_setup">Communication setup</string>
    <string name="lbl_connection_setup_connect">Connect</string>
    <string name="header_communication">Network Status</string>
    <string name="header_language">Language</string>
    <string name="lbl_push_notification">Push Notification</string>
    <string name="lbl_child_protect">Child Protect</string>
    <string name="lbl_setting_water_system">WATER SYSTEM</string>
    <string name="lbl_timer">Timers</string>
    <string name="header_sterilization">Sterilization</string>
    <string name="lbl_set_water_system_clock">Set water system clock</string>
    <string name="lbl_get_water_system_clock">Get water system clock</string>
    <string name="header_consumables">Consumables</string>
    <string name="header_diagnostics">Diagnostics</string>
    <string name="lbl_uv_lamp">UV Lamp</string>
    <string name="lbl_watersystemuptime">Water system uptime</string>
    <string name="header_setting">SETTING</string>
    <string name="label_appversion">App Version %1$s build %2$s</string>
    <string name="alert_system_clock_is">System clock is :</string>
    <string name="alert_communication_direct">Communication status is not available in DIR mode</string>
    <string name="push_communication_direct">Please note that push notification is not available in DIR mode</string>
    <string name="alert_failed_to_system_clock">Failed to set system clock</string>
    <string name="alert_failed_pushnotification">Failed to set push notification</string>
    <string name="alert_system_clock_wa_set_to">System clock was set to: </string>
    <string name="lbl_general">GENERAL</string>
    <string name="lbl_co2_tank_replacement">CO2 tank Replacement</string>
    <string name="lbl_system_realtime_clock">System real-time clock</string>
    <string name="lbl_scanning">Scanning</string>
    <string name="lbl_refrsh">Refresh</string>
    <string name="alert_location_permission">Location Permission required to Scan Device</string>
    <string name="alert_app_notifications_disabled">Notification is disabled in your app settings please enable it.</string>
    <string name="alert_ble_permission">Permission required to Scan BLE.</string>
    <string name="label_ok">OK</string>
    <string name="msf_connecting_device">Connecting Device..</string>
    <string name="alert_unable_to_connect">unable to connect.please try again</string>
    <string name="lbl_unito_peripherals">Unito peripherals</string>
    <string name="alert_failed_connect_hub">Failed to Connect Hub</string>
    <string name="alert_failed_water_setup">Failed to set up Water System</string>
    <string name="lbl_reset">Reset</string>
    <string name="lbl_mac">MAC :</string>
    <string name="lbl_username">Username: </string>
    <string name="lbl_password">Password: </string>
    <string name="lbl_company_code">Company Code: </string>
    <string name="lbl_hub_description">Hub Description: </string>
    <string name="lbl_user_description">User Description: </string>
    <string name="label_done">Done</string>
    <string name="alert_email_validation">Username must be a legal email address</string>
    <string name="alert_password_validation">Password must have atleast 6 characters</string>
    <string name="alert_no_internet">Please check internet connection</string>
    <string name="alert_verification_failed">Verification failed</string>
    <string name="header_setuphub">Setup Hub</string>
    <string name="lbl_ssid_name">SSID Name: </string>
    <string name="lbl_ssid_password">Password: </string>
    <string name="lbl_done">Done</string>
    <string name="lbl_timezone">TimeZone: </string>
    <string name="lbl_water_system">Water System</string>
    <string name="dialog_tiana">Tiana</string>
    <string name="label_cancel">Cancel</string>
    <string name="alert_ssid_validation">Please enter wifi SSID</string>
    <string name="alert_wifi_validation">Please enter wifi password</string>
    <string name="alert_provisioning_success">Provision ended successfully</string>
    <string name="alert_not_in_provisioning_mode">Hub is not in provisioning mode</string>
    <string name="header_setup">Setup</string>
    <string name="dialog_water_system">Water System</string>
    <string name="lbl_hub">HUB</string>
    <string name="lbl_cloud">Cloud</string>
    <string name="lbl_server_settings">Server Settings</string>
    <string name="lbl_dir">DIR</string>
    <string name="lbl_cld">CLD</string>
    <string name="lbl_clear">Disconnect</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_no">No</string>
    <string name="alert_disconnect">Do you really want disconnect?</string>
    <string name="lbl_loading">Loading..</string>
    <string name="lbl_timer1">Timer 1</string>
    <string name="lbl_timer2">Timer 2</string>
    <string name="lbl_repeat">Repeat: </string>
    <string name="label_timer">Timer: </string>
    <string name="lbl_intervals">INTERVALS: </string>
    <string name="header_timers">TIMERS</string>
    <string name="lbl_on">ON</string>
    <string name="label_off">OFF</string>
    <string name="alert_add_inerval_validation">Adding intervals in 24 hour operation is not allowed</string>
    <string name="alert_delete_interval">Delete interval?</string>
    <string name="alert_last_interval">Last Interval must not be deleted</string>
    <string name="lbl_monday">Mon</string>
    <string name="lbl_tuesday">Tue</string>
    <string name="lbl_wednesday">Wed</string>
    <string name="lbl_thursday">Thu</string>
    <string name="lbl_friday">Fri</string>
    <string name="lbl_saturday">Sat</string>
    <string name="lbl_sunday">Sun</string>
    <string name="lbl_short_monday">Mon</string>
    <string name="lbl_short_tuesday">Tue</string>
    <string name="lbl_short_wednesday">Wed</string>
    <string name="lbl_short_thursday">Thu</string>
    <string name="lbl_short_friday">Fri</string>
    <string name="lbl_short_saturday">Sat</string>
    <string name="lbl_short_sunday">Sun</string>
    <string name="lbl_24_hours_operation">24 hours operation</string>
    <string name="header_repeat">REPEAT</string>
    <string name="alert_failed_set_interval">Failed to set interval</string>
    <string name="lbl_edit_timer">Edit Timer</string>
    <string name="lbl_add_timer">Add Timer</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_from">From Time</string>
    <string name="lbl_to">To Time</string>
    <string name="label_24_hours_operation">24 hours</string>
    <string name="alert_timer1_24_hours">Setting 24 hours operation will delete all other enabled intervals on timer1</string>
    <string name="alert_timer2_24_hours">Setting 24 hours operation will delete all enabled other intervals on timer2</string>
    <string name="alert_time_validation">To-time must be greater than From-time</string>
    <string name="alert_timer_set_validation">can not set more than 4 intervals</string>
    <string name="lbl_error">Error</string>
    <string name="lbl_sterilization">Sterilization</string>
    <string name="alert_failed_sterilization">Sterilization failed</string>
    <string name="lbl_time">Time</string>
    <string name="lbl_days">Days</string>
    <string name="lbl_fromtime">From Time</string>
    <string name="lbl_totime">To Time</string>
    <string name="lbl_co2_tank">Co2 tank</string>
    <string name="label_uv_lamp">UV lamp</string>
    <string name="alert_replace_water_filter_v">Are you sure you want to replace Filter to new size - V ?</string>
    <string name="alert_replace_water_filter_xl">Are you sure you want to replace Filter to new size - XL ?</string>
    <string name="alert_replace_water_filter_x">Are you sure you want to replace Filter to new size - X ?</string>
    <string name="alert_replace_co2tank">Are you sure you want to replace Co2 tank?</string>
    <string name="alert_replace_co2tank_rnd_cn">Are you sure you want to replace RND-CN tank?</string>
    <string name="alert_fail_water_filter">failed to set water filter</string>
    <string name="alert_failed_co2tank">failed to set Co2 tank</string>
    <string name="filterreplacement_header_date">Date</string>
    <string name="filterreplacement_header_consumption">Consumed</string>
    <string name="filterreplacement_header_initialvalue">Initial Value</string>
    <string name="filterreplacement_header_name">Name</string>
    <string name="header_dashboad">DASHBOARD</string>
    <string name="lbl_back">Back</string>
    <string name="lbl_connect">System connected to cloud</string>
    <string name="lbl_disconnect">System disconnected from cloud</string>
    <string name="alert_not_enable_to_contact">Not able to connect Water System</string>
    <string name="alert_bluetooth_permission">Bluetooth is Required to connect device</string>
    <string name="lbl_location_permision">Location Permission</string>
    <string name="lbl_replace_co2_tank">Replace CO2 Tank</string>
    <string name="ll_liters">Liters</string>
    <string name="ll_co2_tank_capacity">CO2 Replacement</string>
    <string name="header_service">SERVICE</string>
    <string name="label_water_filter">Water filter</string>
    <string name="alert_replace_filter">Are you sure you want to replace Filter?</string>
    <string name="alert_replace_co2_tank">Are you sure you want to replace co2 tank?</string>
    <string name="alert_failed_co2_tank">Failed to Replace CO2 tank</string>
    <string name="header_tank_replacement">CO2 Tank Replacement</string>
    <string name="lbl_replace_filter">Replace Filter</string>
    <string name="lbl_coming_soon">Coming Soon</string>
    <string name="alert_failed_replace_filter">Failed to Replace Filter</string>
    <string name="header_filter_replacement">Filter Replacement</string>
    <string name="dialog_hood">Hood</string>
    <string name="dialog_cooker">Cooker</string>
    <string name="lbl_confirm">Confirm</string>
    <string name="header_shop">SHOP</string>
    <string name="no_internet_dashboard">No internet connection, Dashboard can not be accessed</string>
    <string name="header_alexa">Activate voice command</string>
    <string name="alert_passwordset_success">User/Password were updated successfully</string>
    <string name="alert_passwordset_fail">Failed to set User/Password</string>
    <string name="lbl_web_dashboard_today">Today</string>
    <string name="lbl_web_dashboard_last_week">Last week</string>
    <string name="lbl_web_dashboard_last_month">Last month</string>
    <string name="lbl_web_dashboard_last_year">Last year</string>
    <string name="chart_boiling">Boiling</string>
    <string name="chart_filtered">Filtered</string>
    <string name="chart_chilled">Chilled</string>
    <string name="chart_sparking">Sparking</string>
    <string name="bar_boiler">Boiler</string>
    <string name="bar_chiller">Chiller</string>
    <string name="chart_mixed">Mixed</string>
</resources>